<resources>
    #Strings usadas en el layout de bienvenido
    <string name="bienvenido">Bienvenido</string>
    <string name="textoBienvenido1">Conociendote mejor podemos</string>
    <string name="textoBienvenido2">recomendar ejercicios para</string>
    <string name="textoBienvenido3">favorecer y cuidar tu salud</string>
    <string name="nombreBienvenido">Ingresa tu nombre:</string>
    <string name="nombreHint">Nombre</string>
    #Strings usadas en el layout de preguntas
    <string name="app_name">Fitdemic</string>
    <string name="titulo1">Cuéntanos</string>
    <string name="titulo2">SOBRE TI</string>
    <string name="conociendote">Conociéndote mejor podemos recomendar ejercicios para favorecer y cuidar tu salud</string>
    <string name="cualEsTuPeso">Peso</string>
    <string name="edad">Edad </string>
    <string name="genero">Género: </string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="botonSiguiente">Seguir</string>
    #Strings usadas en el layout de Padecimientos
    <string name="padecimientos">PADECIMIENTOS</string>
    <string name="artritisPadecimientos">Artritis</string>
    <string name="diabetesPadecimientos">Diabetes</string>
    <string name="sobrepesoPadecimientos">Sobrepeso</string>
    <string name="osteoporosisPadecimientos">Osteoporosis</string>
    <string name="lesionesPadecimientos">Lesiones</string>
    #Strings usadas en el layout de Finalizar
    <string name="tituloFinalizar">Tus datos están</string>
    <string name="titulo2Finalizar">LISTOS</string>
    <string name="pesoFinalizar">PESO:</string>
    <string name="edadFinalizar">EDAD:</string>
    <string name="generoFinalizar">GENERO:</string>
    <string name="padecimientosFinalizar">PADECIMIENTOS</string>
    <string name="botonFinalizar">FINALIZAR</string>
    <string name="rellenar">Rellenar</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    #Strings usadas en el home (main activity)
    <string name="ibRutinaDiaria">Rutina Diaria</string>
    <string name="ibEstiramientos">Estiramientos</string>
    <string name="ibBajoImpacto">Bajo Impacto</string>
    <string name="ibAumentoMasa">Aumento masa</string>
    #-----------------------------------------------------------
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nav_abierto">Barra Lateral Abierta</string>
    <string name="nav_cerrada">Barra Lateral Cerrada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>