<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntasActivity">

    <Button
        android:id="@+id/bSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/futuraregular"
        android:onClick="onCreateUser"
        android:text="@string/botonSiguiente"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSexo" />


    <EditText
        android:id="@+id/etEdad"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:fontFamily="@font/futuraregular"
        android:hint="@string/edad"
        android:inputType="number"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/futuraregular"
        android:text="@string/preguntas"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:fontFamily="@font/futuraregular"
        android:hint="@string/cualEsTuPeso"
        android:inputType="number"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tVsexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad" />


    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rBHombre"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rb_pers"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableTop="@drawable/hombre"
            android:text="@string/hombre"
            android:fontFamily="@font/futuraregular"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@drawable/txt_rb"
            android:textStyle="bold" />


        <RadioButton
            android:id="@+id/rBMujer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rb_pers"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/mujer"
            android:text="@string/mujer"
            android:fontFamily="@font/futuraregular"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@drawable/txt_rb"
            android:textStyle="bold" />


    </RadioGroup>

    <TextView
        android:id="@+id/tVsexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:fontFamily="@font/futuraregular"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />



</androidx.constraintlayout.widget.ConstraintLayout>