<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalizarActivity"
    android:background="@color/colorSecondaryDark">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/futurabold"
        android:text="@string/tituloFinalizar"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futurabold"
        android:text="@string/titulo2Finalizar"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="299dp"
        android:layout_height="410dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/tvPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/pesoFinalizar"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPeso"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/edadFinalizar"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEdad"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/generoFinalizar"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPadecimientos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSexo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="92dp"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/padecimientosFinalizar"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPesoDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@+id/tvPeso"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/rellenar"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEdadDatos"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPesoDatos"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@+id/tvEdad"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/rellenar"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSexoDatos"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEdadDatos"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@+id/tvSexo"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/rellenar"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="239dp"
            android:layout_height="130dp"
            android:layout_below="@+id/tvPadecimientos"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="36dp"
            android:orientation="vertical">


            <ListView
                android:id="@+id/lvPadecimientos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/ralewayextrabold"
            android:gravity="center"
            android:hint="@string/nombreHint"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textColorHint="@color/colorSecondaryDark"
            android:textSize="28sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/finalizar_button"
        android:onClick="next"
        android:text="@string/botonFinalizar"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>