<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PadecimientosActivity"
    android:background="@color/colorSecondaryDark">

    <TextView
        android:id="@+id/tvTitulo1"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/futurabold"
        android:text="@string/titulo1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/futurabold"
        android:text="@string/titulo2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo1" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="276dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo2">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00b0ff"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/padecimientos"
                android:textSize="25dp" />
        </androidx.appcompat.widget.Toolbar>

        <CheckBox
            android:id="@+id/cbArtritis"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="Artritis"
            android:textColor="#0162a3"
            android:textSize="22dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDiabetes"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Diabetes"
            android:textColor="#0162a3"
            android:textSize="22dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbSobrepeso"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Sobrepeso"
            android:textColor="#0162a3"
            android:textSize="22dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbOsteoporosis"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Osteoporosis"
            android:textColor="#0162a3"
            android:textSize="22dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbLesiones"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Lesiones"
            android:textColor="#0162a3"
            android:textSize="22dp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/bSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/futuraregular"
        android:onClick="onCreateUser"
        android:text="@string/botonSiguiente"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSexo"
        app:layout_constraintVertical_bias="0.152" />


</androidx.constraintlayout.widget.ConstraintLayout>